--- a/Deployment.yml
+++ b/Deployment.yml
@@ -1,34 +1,37 @@
 ---
 apiVersion: apps/v1
 kind: Deployment
-metadata:
- name: contactbackendappdeployment
+metadata: 
+  name: backenddeployment
 spec:
- replicas: 1
- selector:
-   matchLabels:
-     app: contactbackend
- template:
-  metadata:
-   name: contactbackend
-   labels:
-     app: contactbackend
-  spec:
-    containers:
-    - name: contactbackendcontainer
-      image: ashokit/contact_backend_app
-      ports:
-      - containerPort: 8080
+  strategy:
+    type: RollingUpdate
+  replicas: 1
+  selector: 
+    matchLabels:
+      app: backendapp
+  template: 
+    metadata:
+      name: backendapppod
+      labels:
+        app: backendapp
+    spec:
+      containers:
+        name: backendcont
+        image: zaidp/backendimage
+        ports:
+        - port: 80
+          containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
- name: contactbackendsvc
+  name: backendsvc
 spec:
   type: LoadBalancer
   selector:
-   app: contactbackend
+    app: backendapp
   ports:
-   - port: 80
-     targetPort: 8080
+  - port: 80
+    targetPort: 8080
 ...
