--- a/Deployment.yml
+++ b/Deployment.yml
@@ -1,36 +1,34 @@
 ---
 apiVersion: apps/v1
-kind: Deployment 
+kind: Deployment
 metadata:
-  name: backenddeployment
+ name: backenddeployment
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: backendapp
-  template:
-    metadata: 
-      name: backendpod
-      labels:
-        app: backendapp
-    spec:
-      containers:
-        name: backendcont
-        image: zaidp/backendimage
-        ports:
-        - port: 80
-          containerPort: 8080
+ replicas: 1
+ selector:
+   matchLabels:
+     app: backendapp
+ template:
+  metadata:
+   name: backendapp
+   labels:
+     app: backendapp
+  spec:
+    containers:
+    - name: contactbackendcontainer
+      image: zaidp//backendimage
+      ports:
+      - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
-metadata: 
-  name: backendsvc
+metadata:
+ name: backendsvc
 spec:
   type: LoadBalancer
   selector:
-    app: backendapp
+   app: backendapp
   ports:
-  - port: 80
-    targetPort: 8080  
+   - port: 80
+     targetPort: 8080
 ...
-
